# acql

./: .gitignore  Makefile  README.md  README.org  main.py  nohup.out  pixi.toml  pyproject.toml
achql/: automaton.py
achql/brax/: utils.py
achql/demo/: collect_demo_policy_rollout.py  demo.ipynb  demo.py  obs_traj.npy  opt_traj.npy
achql/hierarchy/: types.py
achql/navix/: observations.py  tables.py
achql/sb/: dscrl.py  dscrl_ctrl.py  on_policy_algorithm_retaining_gradients.py  tensor_rollout_buffer.py
achql/scripts/: ablation_table.py  ablation_train.py  evaluate.py  get_option_ids.py  lof_train.py  loop_evaluate.py  multihead_exp_train.py  results_table.py  train.py  visualize.py  visualize_rollouts.py
achql/stl/: __init__.py  automata.py  expression.py  var.py
achql/tasks/: utils.py
achql/visualization/: ablation_figure.py  critic.py  flat.py  hierarchy.py  interface.py  plots.py  utils.py
acql/: automaton.py  utils.py
acql/brax/: utils.py
acql/hierarchy/: types.py
acql/navix/: utils.py
acql/stl/: __init__.py  automata.py  expression_jax2.py  utils.py  var.py
acql/tasks/: base.py  utils.py
acql/visualization/: ablation_figure.py  critic.py  hierarchy.py  interface.py  plots.py  utils.py
data/configs/: turtlebot3-dscrl-test.yaml  turtlebot3-dscrl-test2.yaml  turtlebot3-ppo.yaml
mlruns/0/: meta.yaml
mlruns/573344448857634849/: meta.yaml
runs/Oct15_11-29-01_mk-c/: events.out.tfevents.1729006141.mk-c
scripts/: navix_train.py
scripts/brax-testing/: Untitled.ipynb  basics.py  (+16 more)
task_aware_skill_composition/: dscrl.py  utils.py
(+514 files in other folders)
